--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,19 @@
 {
   "name": "parcial1",
   "integrations": {},
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "proxies":[
+    {
+      "path": "/v1",
+      "proxyUrl": "https://webapi.segundamano.mx/nga/api/v1/public"
+    },
+    {
+      "path":"/v2",
+      "proxyUrl": "https://webapi.segundamano.mx/nga/api/v1/public"
+    },
+    {
+      "path":"/v3",
+      "proxyUrl": "https://webapi.segundamano.mx/nga/api/v1/public"
+    }
+  ]
 }
